# vertexcbf

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
configs/: auv_6dof.yaml  cart_pole.yaml  double_integrator_1d.yaml  double_integrator_2d.yaml  double_integrator_3d.yaml  dubins_car.yaml  dynamic_unicycle.yaml  inverted_pendulum.yaml  kinematic_bicycle.yaml  landing_rocket.yaml  manipulator_3dof.yaml  quadrotor.yaml  quadruped_trunk.yaml  relative_unicycle.yaml  template.yaml  vertical_drone_2d.yaml
notebooks/: analyze_results.ipynb  compare_methods.ipynb  test_data_computation.ipynb  visualize_results.ipynb
scripts/: evaluate.py  precompute_data.py  train.py  train_all.sh
vertexcbf/: __init__.py  config_utils.py  losses.py  models.py  trainer.py  validation.py
vertexcbf/constraint/: __init__.py  ball_3d.py  composed.py  ee_sphere.py  rectangle.py  state_limits.py
vertexcbf/constraints/: circle.py  cylinder.py  interval.py  landing_funnel.py  manipulator_sphere.py  two_disk.py
vertexcbf/dynamics/: __init__.py  auv_6dof.py  cart_pole.py  control_affine.py  double_integrator_1d.py  double_integrator_2d.py  double_integrator_3d.py  dubins_car.py  dynamic_unicycle.py  inverted_pendulum.py  kinematic_bicycle.py  landing_rocket.py  manipulator_3dof.py  quadrotor.py  quadruped_trunk.py  relative_unicycle.py  vertical_drone_2d.py
vertexcbf/mpc/: __init__.py  _utils.py  branch_and_bound.py  cem.py  cem_discrete.py  icem.py  mppi.py  random_shooting.py  stochastic_beam_search.py
vertexcbf/trajopt/: _utils.py  (+3 more)
