[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vertexcbf"
version = "0.1.0"
description = "Physics-informed neural CBF / value-function learning for control-affine systems"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy",
    "matplotlib",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["jupyter", "ipykernel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vertexcbf*"]
